# video-summarizer

./: .gitignore  README.md  pyproject.toml
config/: settings.py
src/video_summarizer/: main.py
src/video_summarizer/audio/: extractor.py  summarizer.py  topic_segmenter.py  transcriber.py
src/video_summarizer/cli/: commands.py
src/video_summarizer/keyframes/: extractor.py
src/video_summarizer/llm/: processor.py
src/video_summarizer/models/: data_models.py
src/video_summarizer/utils/: file_manager.py  markdown_generator.py  youtube.py
tests/: test_basic.py  test_keyframe_integration.py
